--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,7 +14,7 @@ jobs:
   install-test-coverage:
     runs-on: ubuntu-latest
     env:
-      MONGODB_URI: ${{ secrets.MONGODB_URI }}
+      CBOE_HOST: ${{ secrets.CBOE_HOST }}
     steps:
       - name: Checkout
         uses: actions/checkout@v3
