--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -6,7 +6,7 @@ on:
     branches: [master, main]
 env:
   PROJECT_FOLDER: cboe_extractor
-  DOCKER_IMAGE_NAME: cboe_extractor
+  DOCKER_IMAGE_NAME: cboe-extractor
   DOCKER_IMAGE_TAG: ${{ github.sha }}
   PYTHON_VERSION: 3.9
   POETRY_VERSION: 1.1.14
